# Spartacus

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.409ba5b  CMakeLists.txt.user.87ead80  README.md
applications/CreateCluster/: CMakeLists.txt  CreateCluster_Version.hxx.in
applications/CreateCluster/src/: CreateCluster_Main.cxx  FILES  PREREQUISITES
applications/Mercury/: CMakeLists.txt
applications/Mercury/src/: Mercury_Engine.hxx
apps/Huygens/: CMakeLists.txt  Huygens_Version.hxx.in
apps/Huygens/res/: CMakeLists.txt  Resources.qrc
apps/Huygens/src/: CMakeLists.txt  Huygens_Desktop.cxx  (+24 more)
engines/Mercury/: CMakeLists.txt  Mercury_Version.hxx.in
src/: CMakeLists.txt  Test_Material.cxx
src/Caelus/: CMakeLists.txt  Caelus_Catenary.cxx  Caelus_Catenary.hxx  Caelus_CreepCurve.cxx  Caelus_CreepCurve.hxx  Caelus_CreepFunction.cxx  Caelus_CreepFunction.hxx  Caelus_Equilibrium.cxx  Caelus_Equilibrium.hxx  Caelus_LoadCase.cxx  Caelus_LoadCase.hxx  Caelus_LoadCaseBuilder.cxx  Caelus_LoadCaseBuilder.hxx  Caelus_Main.cxx  Caelus_RulingSpanBuilder.cxx  Caelus_RulingSpanBuilder.hxx  Caelus_Section.cxx  Caelus_Section.hxx  Caelus_SectionBuilder.cxx  Caelus_SectionBuilder.hxx  Caelus_SequenceOfSpan.hxx  Caelus_SequenceOfSubSection.hxx  Caelus_Span.cxx  Caelus_Span.hxx  Caelus_SpanEquilibrium.cxx  Caelus_SpanEquilibrium.hxx  Caelus_StressStrainCurve.cxx  Caelus_StressStrainCurve.hxx  Caelus_StressStrainFunction.cxx  Caelus_StressStrainFunction.hxx  Caelus_SubSection.cxx  Caelus_SubSection.hxx
src/MCL/: MCL_UniaxialCableMaterial01.cxx  MCL_UniaxialCableMaterial01.hxx
src/MCL1d/: MCL1d_Cable.cxx  MCL1d_Cable.hxx  MCL1d_Elastic.cxx  MCL1d_Elastic.hxx  MCL1d_Material.cxx  MCL1d_Material.hxx
src/MaterialCLaw/: INFOS  MaterialCLaw_UniaxialPolynomial01.cxx  MaterialCLaw_UniaxialPolynomial01.hxx
src/MaterialFLib/: INFOS  MaterialFLib_PolynomialCurve.cxx  MaterialFLib_PolynomialCurve.hxx
src/ShapeXS/: ShapeXS_L.cxx  ShapeXS_L.hxx
src/huygens-application/: CMakeLists.txt  Huygens_Desktop.hxx  Huygens_Main.cxx
src/huygens-kernel/: CMakeLists.txt  Huygens_DataObject.hxx  Huygens_Engine.cxx  Huygens_Engine.hxx  Huygens_Export.hxx  Huygens_IOperations.cxx  Huygens_IOperations.hxx  Huygens_IStudyAttributes.hxx  Huygens_StudyObject.hxx
src/material/: material_Cable.cxx  material_Cable.hxx  material_Elastic.cxx  material_Elastic.hxx
src/spartacus/: CMakeLists.txt  Spartacus_Export.hxx  Spartacus_StandardPaths.cxx  Spartacus_StandardPaths.hxx  Spartacus_Version.hxx.in
tests/: CMakeLists.txt  Test_CRSA_FindEmptyLength.cxx  Test_DataBrowser.cxx  Test_Database.cxx  Test_Framework.cxx  Test_Huygens.cxx  Test_Mercury.cxx  Test_Tetgen.cxx  Test_Triangle.cxx  Test_Viewer3d.cxx  Test_XSM_BimetallicCable01.cxx
tests/Venus/: CMakeLists.txt  Test_MeshDS.cxx  Test_mp.cxx
toolkits/: CMakeLists.txt
toolkits/Apollo/: CMakeLists.txt
toolkits/CCLM1d/: CCLM1d_CableWire01.cxx  CCLM1d_CableWire01.hxx  CCLM1d_Model.cxx  CCLM1d_Model.hxx  DESC
toolkits/CRSA/: CRSA_Command.cxx  CRSA_Command.hxx  CRSA_Error.hxx  CRSA_FindEmptyLength.cxx  CRSA_FindEmptyLength.hxx  CRSA_LoadCase.cxx  CRSA_LoadCase.hxx  CRSA_SaggingAnalysis.cxx  CRSA_SaggingAnalysis.hxx  CRSA_SaggingCondition.cxx  CRSA_SaggingCondition.hxx  CRSA_SpanGeometry.cxx  CRSA_SpanGeometry.hxx  DESC
toolkits/FE/: FE_Domain.cxx  FE_Domain.hxx  FE_Node.cxx  FE_Node.hxx
toolkits/FLib/: FLib_Catenary.cxx  FLib_Catenary.hxx
toolkits/Jupiter/: CMakeLists.txt
toolkits/MCL/: MCL_Material.cxx  MCL_Material.hxx
toolkits/MCL1d/: MCL1d_Elastic.cxx  MCL1d_Elastic.hxx  MCL1d_Material.cxx  MCL1d_Material.hxx
toolkits/MCLM1d/: DESC  MCLM1d_Generic.cxx  MCLM1d_Generic.hxx  MCLM1d_Model.cxx  MCLM1d_Model.hxx
toolkits/Minerva/: CMakeLists.txt
toolkits/RS/: RS_SaggingAnalysis.cxx  RS_SaggingAnalysis.hxx  RS_SpanGeometry.cxx  RS_SpanGeometry.hxx
toolkits/SSCLM1d/: DESC  SSCLM1d_Elastic.cxx  SSCLM1d_Elastic.hxx  SSCLM1d_Model.cxx  SSCLM1d_Model.hxx
toolkits/TECLM1d/: DESC  TECLM1d_Linear.cxx  TECLM1d_Linear.hxx  TECLM1d_Model.cxx  TECLM1d_Model.hxx
toolkits/Tests/: Test_BimetallicCableSection.cxx  Test_CableCreep01.cxx  Test_CableWire01.cxx  Test_Dummy.cxx  Test_ElasticSection.cxx  Test_SaggingAnalysis.cxx  Test_UCrM_CableWire01.cxx  Test_USSM_CableWire01.cxx
toolkits/UCrM/: UCrM_CableCreep01.cxx  UCrM_CableCreep01.hxx  UCrM_CableWire01.cxx  UCrM_CableWire01.hxx  UCrM_CableWire02.cxx  UCrM_Model.cxx  UCrM_Model.hxx
toolkits/UCrMP/: UCrMP_CableWire01.cxx  UCrMP_CableWire01.hxx  UCrMP_CableWire02.cxx  UCrMP_CableWire02.hxx
toolkits/UMM/: DESC  UMM_CableWire01.cxx  UMM_CableWire01.hxx  UMM_Elastic.cxx  UMM_Elastic.hxx  UMM_Model.cxx  UMM_Model.hxx
toolkits/USSM/: DESC  USSM_CableWire01.cxx  USSM_CableWire01.hxx  USSM_CableWire02.cxx  USSM_CableWire02.hxx  USSM_Elastic.cxx  USSM_Elastic.hxx  USSM_Model.cxx  USSM_Model.hxx
toolkits/USSMP/: DESC  USSMP_CableWire01.cxx  USSMP_CableWire01.hxx
toolkits/UThM/: DESC  UThM_BiLinear.cxx  UThM_BiLinear.hxx  UThM_Linear.cxx  UThM_Linear.hxx  UThM_Model.cxx  UThM_Model.hxx
toolkits/Venus/: CMakeLists.txt
toolkits/XSM/: DESC  XSM_BimetallicCable01.cxx  XSM_BimetallicCable01.hxx  XSM_Elastic.cxx  XSM_Elastic.hxx  XSM_Generic.cxx  XSM_Generic.hxx  XSM_Model.hxx  XSM_Section.cxx  XSM_Section.hxx
toolkits/cable/: cable_SpanGeometry.cxx  cable_SpanGeometry.hxx
toolkits/fp/: fp_MenegottoPinto.cxx  fp_MenegottoPinto.hxx  fp_Polynomial.cxx  fp_Polynomial.hxx  fp_StressStrain.cxx  fp_StressStrain.hxx
toolkits/matp/: matp_CableWireCreep01.cxx  matp_CableWireCreep01.hxx  matp_Elastic.cxx  matp_Elastic.hxx  matp_WireStressStrain01.cxx  matp_WireStressStrain01.hxx
toolkits/mmp/: mmp_CableCreep01.cxx  mmp_CableCreep01.hxx  mmp_CableWireCreep01.cxx  mmp_CableWireCreep01.hxx  mmp_CableWireStressStrain01.cxx  mmp_CableWireStressStrain01.hxx  mmp_Elastic.cxx  mmp_Elastic.hxx
toolkits/src/: TOOLKITS
tools/MeshBuilder/: CMakeLists.txt  MeshBuilder_Desktop.cxx  MeshBuilder_Desktop.hxx  MeshBuilder_Main.cxx  MeshBuilder_Viewer.cxx  MeshBuilder_Viewer.hxx
tools/Tower/: CMakeLists.txt  Tower_Main.cxx
(+582 files in other folders)
